<resources>
    <string name="app_name">Trader</string>

    <string name="button_save">Save</string>
    <string name="new_product_title">New Product</string>
    <string name="text_input_name">Name</string>
    <string name="text_input_manufacturer">Manufacturer</string>
    <string name="text_input_batch">Batch</string>
    <string name="btn_save">Save</string>
    <string name="text_input_packing">Packing</string>
    <string name="text_input_rp">Retail Price</string>
    <string name="text_input_tp">Trade Price</string>
    <string name="text_input_quantity">Quantity</string>
    <string name="text_input_min_stock">Minimum Stock</string>
    <string name="paking_type_mass">Mass</string>
    <string name="paking_type_volume">Volume</string>
    <string name="title_paking_type">Packing Type</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="manufacture_date">Manufacture Date</string>
    <string name="paking_type_items">Items</string>
    <string name="product_saved">"Product "</string>
    <string name="product_added_msg">Product added.</string>
    <string name="add_product">Add Product</string>
    <string name="products">Products</string>
    <string name="customers">Customers</string>
    <string name="invoices">Invoices</string>
    <string name="recoveries">Recoveries</string>
    <string name="returns">Returns</string>
    <string name="expenses">Expenses</string>
    <string name="schedule">Schedule</string>
    <string name="error">Error: Failed</string>
    <string name="purchase_price">Purchase Price:</string>
    <string name="sale_price">Sale Price:</string>
    <string name="stock_quantity">Stock Quantity:</string>
    <string name="stock_value">Stock Value:</string>
    <string name="round_to_two_decimal_places">%.2f</string>
</resources>
